--- a/app/views/vehicles/_vehicle_maintenance_compliances_table.html.haml
+++ b/app/views/vehicles/_vehicle_maintenance_compliances_table.html.haml
@@ -5,6 +5,7 @@
       %th= translate_helper("vehicle_maintenance_compliance_form_event")
       %th.col-sm-3= translate_helper("vehicle_maintenance_compliance_form_compliance_date")
       %th.col-sm-3= translate_helper("vehicle_maintenance_compliance_form_compliance_mileage")
+      %th= translate_helper("vehicle_maintenance_schedule_document")
       - unless @readonly
         %th.col-sm-1
   %tbody
