--- a/app/views/document_associations/_document_row.html.haml
+++ b/app/views/document_associations/_document_row.html.haml
@@ -4,13 +4,17 @@
     %td.hidden
       =doc_f.hidden_field :id, value: document.id
     %td
-      =doc_f.text_field :description, value: document.description
+      - if @readonly 
+        = document.description
+      - else
+        =doc_f.text_field :description, value: document.description
     %td
       -if document.document_file_name
         =link_to document.document_file_name, document.document.url, target: :blank
       -else
-        =doc_f.file_field :document
-    %td
-      .btn.btn-danger.btn-sm.delete-document-row
-        %i.fa.fa-remove{'aria-hidden' => true}
-      =doc_f.check_box :_destroy, class: 'destroy-document hidden'
+        =doc_f.file_field :document, disabled: @readonly 
+    - unless @readonly   
+      %td
+        .btn.btn-danger.btn-sm.delete-document-row
+          %i.fa.fa-remove{'aria-hidden' => true}
+        =doc_f.check_box :_destroy, class: 'destroy-document hidden'
