--- a/app/views/driver_compliances/_form.html.haml
+++ b/app/views/driver_compliances/_form.html.haml
@@ -18,37 +18,39 @@
             .col-md-3.control-label
               %label= translate_helper("driver_requirement_template_field_label")
             .col-md-9
-              = f.collection_select :driver_requirement_template_id, @driver_requirement_templates, :id, :name, { include_blank: true }, { class: "form-control", id: "driver_requirement_template" }
+              = f.collection_select :driver_requirement_template_id, @driver_requirement_templates, :id, :name, { include_blank: true }, { class: "form-control", id: "driver_requirement_template", disabled: @readonly }
           .form-group
             = f.label :event, translate_helper("driver_compliance_form_event"), class: "col-md-3 control-label"
             .col-md-9
-              = f.text_field :event, class: "form-control"
+              = f.text_field :event, class: "form-control", disabled: @readonly
           .form-group
             = f.label :notes, translate_helper("driver_compliance_form_notes"), class: "col-md-3 control-label"
             .col-md-9
-              = f.text_area :notes, class: "form-control", rows: 3
+              = f.text_area :notes, class: "form-control", rows: 3, disabled: @readonly
           .form-group
             = f.label :due_date, translate_helper("driver_compliance_form_due_date"), class: "col-md-3 control-label"
             .col-md-9
               .input-group.datepicker-icon
-                = f.text_field :due_date, class: "form-control datepicker"
-                .input-group-btn
-                  %button.btn.btn-default{:type => "button"}
-                    = image_tag "calendar-clock.png"
+                = f.text_field :due_date, class: "form-control datepicker", disabled: @readonly
+                - unless @readonly
+                  .input-group-btn
+                    %button.btn.btn-default{:type => "button"}
+                      = image_tag "calendar-clock.png"
           .form-group
             = f.label :compliance_date, translate_helper("driver_compliance_form_compliance_date"), class: "col-md-3 control-label"
             .col-md-9
               .input-group.datepicker-icon
-                = f.text_field :compliance_date, class: "form-control datepicker"
-                .input-group-btn
-                  %button.btn.btn-default{:type => "button"}
-                    = image_tag "calendar-clock.png"
+                = f.text_field :compliance_date, class: "form-control datepicker", disabled: @readonly
+                - unless @readonly
+                  .input-group-btn
+                    %button.btn.btn-default{:type => "button"}
+                      = image_tag "calendar-clock.png"
         / END .panel-body
       / END .panel
       = render partial: "document_associations/form_panel", locals: {f: f, documents: @driver_compliance.driver.documents}
     / END .col-md-12
   / END .row
-  .row.form-actions= f.submit translate_helper("driver_compliance_form_submit"), class: "btn action-button"
+  .row.form-actions= f.submit translate_helper("driver_compliance_form_submit"), class: "btn action-button" unless @readonly
 
   :javascript
     $('#driver_requirement_template').change(function() {
