--- a/app/views/vehicle_maintenance_events/_vehicle_maintenance_event.html.haml
+++ b/app/views/vehicle_maintenance_events/_vehicle_maintenance_event.html.haml
@@ -1,7 +1,7 @@
 %tr{:class => "vehicle_maintenance_event-#{vehicle_maintenance_event.id}"}
   %td
     %p.form-control-static
-      = link_to_unless @readonly, vehicle_maintenance_event.service_date.try(:to_s, :long), polymorphic_path([vehicle_maintenance_event.vehicle, vehicle_maintenance_event], action: :edit), remote: true
+      = link_to vehicle_maintenance_event.service_date.try(:to_s, :long), polymorphic_path([vehicle_maintenance_event.vehicle, vehicle_maintenance_event], action: @readonly ? nil : :edit), remote: true
       - if vehicle_maintenance_event.documents.present?
         %i.fa.fa-paperclip{'aria-hidden' => true}
   %td
