Can directly reactivate a vehicle if its permanently inactivated

--- a/app/views/shared/_date_range_inactivate_dialog.html.haml
+++ b/app/views/shared/_date_range_inactivate_dialog.html.haml
@@ -70,6 +70,7 @@
       $('#permanent_inactive').prop('checked', false);
       $('#resource_active').val(true);
       $('.date-picker').val('');
+      $('#inactivateDialog form').submit();
     });
 
     $('#inactivateDialog form').submit(function() {
