Detect unavailability when creating a daily run

--- a/app/views/runs/_unavailable_driver_vehicle_warning_dialog.html.haml
+++ b/app/views/runs/_unavailable_driver_vehicle_warning_dialog.html.haml
@@ -1,4 +1,4 @@
-#unavailable_driver_warning_dialog.modal.fade.col-sm-12{:role => "dialog", "aria-hidden" => 'true', :tabindex => "-1", data: {"backdrop": "static", "keyboard": false }}
+#unavailable_warning_dialog.modal.fade.col-sm-12{:role => "dialog", "aria-hidden" => 'true', :tabindex => "-1", data: {"backdrop": "static", "keyboard": false }}
   .modal-dialog
     .modal-content
       .modal-header
@@ -9,16 +9,17 @@
             = translate_helper(:back)
         .modal-title{:style => "text-align:left;"}
           %strong
-            = translate_helper(:unavailable_driver_warning)
+            = translate_helper(:unavailable_warning_dialog_title)
       .modal-body.row{:style => "text-align:left; margin: 0px;"}
-        %b= translate_helper(:unavailable_driver_for_run_time_range_warning)
+        %b= translate_helper(:unavailable_warning_message)
+        %ul.col-sm-12#unavailable_warning_messages
 
   :javascript
     $('#confirm_warning').click(function() {
-      $('#unavailable_driver_warning_dialog').modal('hide');
+      $('#unavailable_warning_dialog').modal('hide');
       $('.run_form').submit();
     });
 
     $('#cancel_warning').click(function() {
-      $('#unavailable_driver_warning_dialog').modal('hide');
+      $('#unavailable_warning_dialog').modal('hide');
     });
