--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -48,19 +48,22 @@
     });
 
 - if !@is_repeating_run && edit_mode != :show
-  = render 'runs/unavailable_driver_warning_dialog'
+  = render 'unavailable_driver_vehicle_warning_dialog'
   :javascript
     $(function() {
       $('.run_form input[type=submit]').click(function() {
         var driver_id = $('#run_driver_id').val();
+        var vehicle_id = $('#run_vehicle_id').val();
         var date = $('#run_date').val();
         var start_time = $('#run_scheduled_start_time').val();
         var end_time = $('#run_scheduled_end_time').val();
-        if(driver_id && date && start_time && end_time) {
-          var url = "#{check_time_range_availability_driver_path('xxx')}";
+        if(date) {
+          var url = "#{check_driver_vehicle_availability_runs_path(format: :js)}";
           $.ajax({
-            url: url.replace('xxx', driver_id),
+            url: url,
             data: {
+              driver_id: driver_id,
+              vehicle_id: vehicle_id,
               date: date,
               start_time: start_time,
               end_time: end_time
