--- a/app/views/vehicles/show.html.haml
+++ b/app/views/vehicles/show.html.haml
@@ -9,7 +9,7 @@
         = link_to translate_helper("delete_vehicle_button"), @vehicle, method: :delete, data: { confirm: translate_helper("delete_vehicle_confirmation") }, class: "btn action-button" if can?(:delete, @vehicle)
         = link_to translate_helper("edit_vehicle_button"), edit_vehicle_path(@vehicle), class: "btn action-button"
         - if @vehicle.permanent_inactivated?
-          = link_to translate_helper("reactivate"), vehicle_activate_path(@vehicle), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_confirmation)}
+          = link_to translate_helper("reactivate"), reactivate_vehicle_path(@vehicle), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_confirmation)}
         - else
           = button_tag :type => 'button', id: 'inactivateVehicle', "data-target" => "#inactivateDialog", "data-toggle" => "modal", :class => "btn action-button btn-danger" do
             = @vehicle.inactivated? ? translate_helper(:activate) : translate_helper(:inactivate)
