--- a/app/views/customers/_new_address_js.html.erb
+++ b/app/views/customers/_new_address_js.html.erb
@@ -53,8 +53,9 @@
     // an id should be returned, and then the form should close.
     // if no id is returned, error messages are filled in. 
     $("body").on('ajax:success', '.address-validate', function(evt, data, status, xhr){
+        console.log('test');
       if (data.success) {
-        $( $(this)[0].parentNode ).dialog( "close" );
+        $('#addAddressDialog').modal('hide');
 
         //insert a new address row
         updateAddressRow(data.attributes, data.address_text);
@@ -77,13 +78,13 @@
                   form = $( this )[0].children[0];
                   $(form).trigger('submit'); 
               },
-              Cancel: function() {
+              "Cancel": function() {
                 $( this ).dialog( "close" );
               }
           }
       });
     };
     
-    makeDialogs();
+    //makeDialogs();
   });
 </script>
