--- a/app/views/drivers/show.html.haml
+++ b/app/views/drivers/show.html.haml
@@ -12,7 +12,7 @@
         - if @driver.permanent_inactivated?
           = link_to translate_helper("reactivate"), reactivate_driver_path(@driver), method: :post, :class=>'btn action-button', :data => { :confirm => translate_helper(:reactivate_confirmation)}
         - else
-          = button_tag :type => 'button', id: 'inactivateDriver', "data-target" => "#inactivateDialog", "data-toggle" => "modal", :class => "btn action-button btn-danger" do
+          = button_tag :type => 'button', id: 'inactivateDriver', "data-target" => "#inactivateDialog", "data-toggle" => "modal", :class => "btn action-button" do
             = @driver.inactivated? ? translate_helper(:activate) : translate_helper(:inactivate)
 
 = render partial: "form"
