--- a/app/views/shared/_date_range_inactivate_dialog.html.haml
+++ b/app/views/shared/_date_range_inactivate_dialog.html.haml
@@ -5,7 +5,7 @@
         .modal-header
           .pull-right
             - if resource.inactivated?
-              = button_tag translate_helper(:activate), id: 'activate_resource', type: :button, style: "margin-right: 5px;", class: "btn action-button btn-danger"
+              = button_tag translate_helper(:activate), id: 'activate_resource', type: :button, style: "margin-right: 5px;", class: "btn action-button"
             = button_tag translate_helper(:submit), type: :submit, style: "margin-right: 5px;", class: "btn action-button"
             = button_tag class: 'btn action-button', data: {dismiss: 'modal'} do
               = translate_helper(:cancel)
