--- a/app/views/trips/_double_booked_trip_dialog.html.haml
+++ b/app/views/trips/_double_booked_trip_dialog.html.haml
@@ -8,7 +8,7 @@
         .pull-right
           .submit-double-book-modal.btn.btn-primary{ data: {dismiss: 'modal'} }
             =translate_helper(:double_booked_modal_submit)
-          .dismiss-double-book-modal.btn.btn-danger{ data: {dismiss: 'modal'} }
+          .dismiss-double-book-modal.btn.btn-default{ data: {dismiss: 'modal'} }
             =translate_helper(:double_booked_modal_dismiss)
         %h5.modal-title{:style => "text-align:left;"}
           %strong
