--- a/app/views/trips/_trip_result_reason_dialog.html.haml
+++ b/app/views/trips/_trip_result_reason_dialog.html.haml
@@ -10,7 +10,7 @@
             =translate_helper(:submit)
           .skip-result-reason.btn.btn-warning.cancel-code{ data: {dismiss: 'modal'} }
             =translate_helper(:trip_result_modal_dismiss)
-          .cancel-result-reason.btn.btn-danger{ data: {dismiss: 'modal'} }
+          .cancel-result-reason.btn.btn-default{ data: {dismiss: 'modal'} }
             =translate_helper(:trip_result_modal_cancel)
         %h5.modal-title{:style => "text-align:left;"}
           %strong
