--- a/app/views/addresses/_geocoding_or_not_form_fields.html.haml
+++ b/app/views/addresses/_geocoding_or_not_form_fields.html.haml
@@ -2,9 +2,10 @@
 - defined?(edit_mode) ? edit_mode : edit_mode = :new
 = hidden_field_tag :lat, address.latitude, class: 'address_lat'
 = hidden_field_tag :lon, address.longitude, class: 'address_lon'
+- name_label = prefix == "customer" ? translate_helper("address_code") : translate_helper("address_name") 
 %li.selfclear
-  = form.label :name, translate_helper("address_name")
-  = form.text_field :name, maxlength: 30
+  = form.label :name, name_label
+  = form.text_field :name, maxlength: 30, class: 'form-control'
 %li.selfclear
   = label_tag "#{prefix}_non_street_mailing_address", translate_helper("non_street_mailing_address")
   = check_box_tag "#{prefix}_non_street_mailing_address", 'yes', false, class: 'address_non_street_mailing_address'
@@ -13,32 +14,32 @@
   - if edit_mode == :edit
     = address.try(:address_text)
   - else
-    = text_field_tag "#{prefix}_full_address", address.try(:address_text), class: 'address_search'
+    = text_field_tag "#{prefix}_full_address", address.try(:address_text), class: 'address_search form-control'
 .selfclear.non_geocoding_address{:style => "display: none;"}
   %li.selfclear
     = form.label :address, translate_helper("address")
-    = form.text_field :address, class: 'address_text'
+    = form.text_field :address, class: 'address_text form-control'
   %li.selfclear
     = form.label :city, translate_helper("city")
-    = form.text_field :city , class: 'address_city'
+    = form.text_field :city , class: 'address_city form-control'
   %li.selfclear
     = form.label :state, translate_helper("state")
-    = form.text_field :state, :size=>2, :maxlength=> 2, :class => 'address_state', :data => {:convert => 'uppercase'}
+    = form.text_field :state, :size=>2, :maxlength=> 2, :class => 'address_state form-control', :data => {:convert => 'uppercase'}
   %li.selfclear
     = form.label :zip, translate_helper("zip")
-    = form.text_field :zip, class: 'address_zip'
+    = form.text_field :zip, class: 'address_zip form-control'
 %li.selfclear
   = form.label :phone_number, translate_helper("phone_number")
-  = form.text_field :phone_number
+  = form.text_field :phone_number, class: 'form-control'
 %li.selfclear
   = form.label :default_trip_purpose, translate_helper("default_trip_purpose")
-  = form.select :trip_purpose_id, TripPurpose.by_provider(current_provider).map { |tp| [tp.name, tp.id] }, :include_blank => true
+  = form.select :trip_purpose_id, TripPurpose.by_provider(current_provider).map { |tp| [tp.name, tp.id] }, :include_blank => true, class: 'form-control'
 %li.selfclear
   = form.label :in_district, translate_helper("in_district")
-  = form.select :in_district, [[translate_helper("unspecified"),nil], [translate_helper("yes"), true], [translate_helper("no"), false]]
+  = form.select :in_district, [[translate_helper("unspecified"),nil], [translate_helper("yes"), true], [translate_helper("no"), false]], class: 'form-control'
 %li.selfclear
   = form.label :notes, translate_helper("address_notes")
-  = form.text_area :notes
+  = form.text_area :notes, class: 'form-control'
 = render 'addresses/google_place_autocomplete_js' if prefix != 'pickup'
 :javascript
   $(function() {
