Fix document files being ignored bug

--- a/app/views/document_associations/_document_row.html.haml
+++ b/app/views/document_associations/_document_row.html.haml
@@ -1,6 +1,7 @@
 -document = local_assigns[:document] || Document.new
+-hidden = local_assigns[:hidden] || false
 =f.fields_for :documents, document, wrapper: false do |doc_f|
-  %tr.document-row
+  %tr.document-row{class: hidden ? 'hidden' : ''}
     %td.hidden
       =doc_f.hidden_field :id, value: document.id
     %td
