streamline provider setup workflow

--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -590,7 +590,7 @@ form div.actions {
 }
 form div.actions input[type="submit"] {
   padding: 0.5em 0.8em;
-  background: #0081CC;
+  background: #336699;
   color: #fff;
   font-size: 15px;
   text-decoration: none;
@@ -600,7 +600,7 @@ form div.actions input[type="submit"] {
   border-radius: 5px;
 }
 form div.actions input[type="submit"]:hover {
-  background: #009FFB;
+  background: #264c73;
 }
 /* tables */
 table {
