--- a/app/views/providers/show.html.haml
+++ b/app/views/providers/show.html.haml
@@ -1,1 +1,9 @@
-= render 'template', partial_name: 'profile'
+#page-header.row
+  - if can? :manage, @provider
+    .pull-right
+      = link_to translate_helper("delete_provider_button"), @provider, method: :delete, data: { confirm: translate_helper("delete_provider_confirm") }, class: "btn action-button  btn-danger" if can?(:delete, @provider)
+      = link_to translate_helper("edit_provider_button"), edit_provider_path(@provider), class: "btn action-button"
+  %h1
+    = translate_helper("show_provider_heading", provider: @provider.name)
+
+= render 'template', partial_name: 'profile', hide_header: true
