--- a/app/views/users/_form_header.html.haml
+++ b/app/views/users/_form_header.html.haml
@@ -2,18 +2,18 @@
   - if edit_mode == :new
     .pull-right
       = f.submit translate_helper(:save), class: 'btn action-button'
-      = link_to translate_helper(:cancel), :back, class: "btn btn-default"
+      = link_to translate_helper(:cancel), users_provider_path(@provider), class: "btn btn-default"
     %h1
       = translate_helper("new_user_heading")
   - else
     .pull-right
       - if edit_mode == :edit
         = f.submit translate_helper(:update), class: 'btn action-button'
-        = link_to translate_helper(:cancel), :back, class: "btn btn-default"
+        = link_to translate_helper(:cancel), user_path(@user), class: "btn btn-default"
       - else
         - if !@user.new_record? && can?(:edit, @user)
           = link_to translate_helper("reset_password"), show_reset_password_user_path(@user), :class=>'btn action-button btn-danger' 
           = link_to translate_helper("edit"), edit_user_path(@user), :class=>'btn action-button' 
-        = link_to translate_helper(:back), :back, class: "btn btn-default"
+        = link_to translate_helper(:back), users_provider_path(@provider), class: "btn btn-default"
     %h1
       = @user.display_name
