--- a/app/views/drivers/_driver.html.haml
+++ b/app/views/drivers/_driver.html.haml
@@ -6,7 +6,7 @@
   %td
     = driver.paid? ? translate_helper("driver_paid") : translate_helper("volunteer")
   %td
-    = driver.available? ? translate_helper("driver_available") : translate_helper("driver_unavailable")
+    = !driver.active? ? translate_helper("n_a") : (driver.available? ? translate_helper("driver_available") : translate_helper("driver_unavailable"))
   %td
     = driver.compliant? ? translate_helper("no") : translate_helper("yes")
   %td
